--- a/package.json
+++ b/package.json
@@ -3,25 +3,36 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3002",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.12.1",
+    "@tippyjs/react": "^4.2.6",
+    "antd": "^5.14.2",
+    "axios": "^1.6.7",
+    "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
+    "next": "14.1.0",
+    "rc-virtual-list": "^3.11.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.0"
+    "react-loading-skeleton": "^3.4.0",
+    "react-player": "^2.15.1",
+    "react-slick": "^0.30.2",
+    "swiper": "^11.0.7"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0"
+    "typescript": "^5"
   }
 }
